apps/homelab/excalidraw/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: excalidraw
  name: excalidraw
