apps/homelab/excalidraw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
  labels: &labels
    app.kubernetes.io/name: excalidraw
    app.kubernetes.io/component: excalidraw
    app.kubernetes.io/instance: application
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
---
