apps/homelab/excalidraw/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
  labels: &labels
    app.kubernetes.io/name: excalidraw
    app.kubernetes.io/component: excalidraw
spec:
  selector: *labels
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
